<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/desc4"
            android:textColor="@color/textPrimaryColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/btnPrev"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/txtCalculated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultBalance"
            android:textColor="@color/textPrimaryColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/disclaim1"
            android:textColor="@color/textPrimaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/txtSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/summary"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/textPrimaryColor"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/imgCoffee"
            app:layout_constraintTop_toBottomOf="@+id/txtCalculated" />

        <ImageView
            android:id="@+id/imgCoffee"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/imageDesc"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCalculated"
            app:srcCompat="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/btnPrev"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_navigate_before_black_24dp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>